# GameOfLife

./: Board.cpp  Board.h  CMakeLists.txt  GameOfLife.pro  button.cpp  button.h  config.txt  display.cpp  display.h  game.cpp  game.h  main.cpp  rle_encoder.cpp  rle_encoder.h  shapebutton.cpp  shapebutton.h  textbox.cpp  textbox.h  textbutton.cpp  textbutton.h
cmake_modules/: FindBoost.cmake
patterns/: copperhead.rle  gosperglidergun.rle  queenbeeshuttle.rle
